[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/MatchUI.gd" type="Script" id=1]

[node name="MatchUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RadiantHeroes" type="VBoxContainer" parent="."]
anchor_top = 0.501291
anchor_bottom = 0.501291
margin_left = 100.0
grow_vertical = 2
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DireHeroes" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_right = -100.0
grow_horizontal = 0
grow_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Time" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_top = 10.0
margin_right = 20.0
margin_bottom = 14.0
text = "00:00"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
